// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty 1`] = `undefined`;

exports[`Multiple tabs 1`] = `
<span
  class="svelte-3qf6s7"
>
  <div
    class="root svelte-1hpkjx7"
  >
    <nav
      class="svelte-1hpkjx7"
    >
      <ul
        class="svelte-1hpkjx7"
      >
        <li
          class="svelte-1hpkjx7 current"
        >
          First tab
        </li>
        
        <li
          class="svelte-1hpkjx7"
        >
          Another one
        </li>
        
        <li
          class="svelte-1hpkjx7"
        >
          A third...
        </li>
        
         
        <li
          class="svelte-1hpkjx7"
        >
           
          <button
            class="iconOnly noColor svelte-6r5o0y"
            title="tooltip.collapsible"
          >
            <i
              class="material-icons svelte-6r5o0y"
            >
              expand_more
            </i>
             
             
          </button>
          <!--&lt;Button&gt;-->
        </li>
      </ul>
    </nav>
     
    <main
      class="svelte-1hpkjx7"
    >
      <h1>
        This is pane #1
      </h1>
      <!--&lt;Pane1&gt;-->
      
      
      
      
       
    </main>
  </div>
  
  <!--&lt;PaneContainer&gt;-->
</span>
`;

exports[`Single tab 1`] = `
<span
  class="svelte-3qf6s7"
>
  <div
    class="root svelte-1hpkjx7"
  >
    <nav
      class="svelte-1hpkjx7"
    >
      <ul
        class="svelte-1hpkjx7"
      >
        <li
          class="svelte-1hpkjx7 current"
        >
          tab 1
        </li>
        
         
        <li
          class="svelte-1hpkjx7"
        >
           
          <button
            class="iconOnly noColor svelte-6r5o0y"
            title="tooltip.collapsible"
          >
            <i
              class="material-icons svelte-6r5o0y"
            >
              expand_more
            </i>
             
             
          </button>
          <!--&lt;Button&gt;-->
        </li>
      </ul>
    </nav>
     
    <main
      class="svelte-1hpkjx7"
    >
      <h1>
        This is pane #1
      </h1>
      <!--&lt;Pane1&gt;-->
      
      
       
    </main>
  </div>
  
  <!--&lt;PaneContainer&gt;-->
</span>
`;
